--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,24 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  @import url("https://fonts.googleapis.com/css?family=Old+Standard+TT:400i,700|Open+Sans:400,400i");
+
+  body {
+    margin: 0;
+    background-color: #1a1a1a;
+    font-family: "Open Sans";
+    color: #222;
+  }
+  
+  #app {
+    position: relative;
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  </style>
