--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"><link rel="stylesheet" href="./style.css">
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>  
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -19,12 +23,18 @@
 <style>
   @import url("https://fonts.googleapis.com/css?family=Old+Standard+TT:400i,700|Open+Sans:400,400i");
 
-  body {
+/*   body {
     margin: 0;
     background-color: #1a1a1a;
     font-family: "Open Sans";
     color: #222;
-  }
+  } */
+
+  html, body {
+  background: #E3E3D8;
+  font-family: sans-serif;
+  padding: 25px;
+}
   
 
-  </style>
+  </style><script  src="./script.js"></script>
