--- a/public/index.html
+++ b/public/index.html
@@ -23,17 +23,11 @@
 <style>
   @import url("https://fonts.googleapis.com/css?family=Old+Standard+TT:400i,700|Open+Sans:400,400i");
 
-/*   body {
-    margin: 0;
-    background-color: #1a1a1a;
-    font-family: "Open Sans";
-    color: #222;
-  } */
-
   html, body {
   background: #E3E3D8;
   font-family: sans-serif;
-  padding: 25px;
+  margin: 0;
+  padding: 0;
 }
   
 
